css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Nunito', sans-serif;
}


/*title + paragrapher*/
h1 {
    color: #e53070;
    font-size: 1.8em;
    text-align: center;

    margin-top: 25px;
    margin-bottom: 30px;
}

p {
    font-size: 0.8em;
    font-weight: 400;

    margin-bottom: 30px;
    margin-left: 15%;
    margin-right: 15%;
}

/*container boxes*/

.container {
    width: 70%;
    margin-left: auto;
    margin-right: auto;
}

.row .box {
    width: calc(100% / 3);
    float: left;
}

/*boxes content*/
.box {
    margin-top: 30px;
    padding-right: 20px;
}

div {
    color: white;
    font-size: 0.9em;
}

img {
    height: 80px;
    float: left;
}

h2 {
    color: white;
    font-size: 1em;
    padding: 10px 0 5px 90px;
}

.id {
    background-color: #0f0e17;
    box-shadow: 10px 10px 5px #dedede;
}

.job {
    padding-left: 90px;
    padding-bottom: 3px;
}

span {
    color: #006dc3;
    padding-left: 10px;
}

/*clearfix*/
.clearfix::after {
    content: "";
    display: table;
    clear: both;
}

